--- a/index-EN.html
+++ b/index-EN.html
@@ -108,7 +108,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#contact" class="nav-link">Contact</a>
+                        <a class="nav-link text-white" href="#footer" class="nav-link">Contact</a>
                     </li>
 
                 </ul>
