--- a/index-EN.html
+++ b/index-EN.html
@@ -30,13 +30,13 @@
     <!--Open graph-->
     <meta property="og:title" content="Soledad Priano Portfolio">
     <meta property="og:descripcion" content="I am a industrial designer. Development from research, concept, engineering to manufacturing. Creative. 3D modeling. UX/UI. Web development.">
-    <meta property="og:imagen" content="img/portada.png">
+    <meta property="og:imagen" content="img/icons/Icon-web.svg">
     <meta property="og:url" content="https://soledadpriano.com/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_EN">
     
     <!--FAVICON-->
-    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icons/Icon-web.svg" type="image/x-icon">
 
     <!--Nombre de Pestana-->
     <title>Portfolio</title>
@@ -95,11 +95,11 @@
                             Portfolio
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="vertigo-EN.html">Furniture</a></li>
-                            <li><a class="dropdown-item" href="bikes-EN.html">Metal</a></li>
-                            <li><a class="dropdown-item" href="cva-EN.html">3D Models</a></li>
-                            <li><a class="dropdown-item" href="interieur-EN.html">Prototypes</a></li>
-                            <li><a class="dropdown-item" href="coco-EN.html">Packaging</a></li>
+                            <li><a class="dropdown-item" href="vertigo-EN.html">Vertigo</a></li>
+                            <li><a class="dropdown-item" href="cva-EN.html">CVA SA</a></li>
+                            <li><a class="dropdown-item" href="interieur-EN.html">interieur Forma</a></li>
+                            <li><a class="dropdown-item" href="bikes-EN.html">Bikes station</a></li>
+                            <li><a class="dropdown-item" href="coco-EN.html">Coconut Milk</a></li>
                         </ul>
                     </li>
 
@@ -176,7 +176,7 @@
                             a vast example of my work: simple sketches, complex prototypes and models.
                     </p>
                     <div class="button readMore">
-                        <a href="about-EN.html" class="button-v btn btn-primary">Know More</a>                      </a>
+                        <a href="about-EN.html" class="button-v btn btn-primary">Know More</a>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                                 <span class="icon "><img class= "icon lead" src="img/icons/Icon-2.svg" alt="3D cube"></span>
                                 <h5>3D Modeling</h5>
                                 <h6>Solidworks - Inventors</h6>
-                                <p>Dibujo parametrico de productos y renderizados de los mismos</p>
+                                <p>Parametric drawing of products and their renderings</p>
                             </div>
                         </div>
 
@@ -212,7 +212,7 @@
                                 <span class="icon " ><img class= "icon lead" src="img/icons/Icon-3.svg" alt="blueprints"></span>
                                 <h5>Blueprint Drawing</h5>
                                 <h6>Autocad - Solidworks</h6>
-                                <p>Realizacion de planos de conjuntos y de sus piezas para su desarrollo</p>
+                                <p>Drawing up drawings of assemblies and their parts for their development</p>
                             </div>
                         </div>
 
@@ -221,7 +221,7 @@
                                 <span class="icon"><img class= "icon lead" src="img/icons/Icon-4.svg" alt="vector drawing"></span>
                                 <h5>Product Design</h5>
                                 <h6>UX - UI</h6>
-                                <p>Diseños de mockups/firewoks, uso de Ilustrator - Photoshop y mas sasaras que no se mas</p>
+                                <p>Mockup / fireworks designs. Using Adobe Illustrator - Photoshop - XD</p>
                             </div>
                         </div>
 
@@ -230,7 +230,7 @@
                                 <span class="icon " ><img class= "icon lead" src="img/icons/Icon-1.svg" alt="pc screen"></span>
                                 <h5>Development</h5>
                                 <h6>Web & Mobile Development</h6>
-                                <p>Aplicacion de lenguajes HTML, CSS y PHYTON. Conjunto con UX/UI</p>
+                                <p>Use of HTML, CSS and SCSS languages</p>
                             </div>
                         </div>
 
@@ -259,8 +259,8 @@
                 <input type="radio" id="renders" name="portfolio" />
                 <label for="renders" class="shadow rounded">Renders</label>
 
-                <input type="radio" id="furniture" name="portfolio" />
-                <label for="furniture" class="shadow rounded">Furniture</label>
+                <input type="radio" id="stands" name="portfolio" />
+                <label for="furniture" class="shadow rounded">Exibition</label>
 
                 <input type="radio" id="prototypes" name="portfolio" />
                 <label for="prototypes" class="shadow rounded ">Prototypes</label>
@@ -281,16 +281,16 @@
                             <p>Develop of a widnow cleanning</p>
                         </div>
                         <div class="cap2">
-                            <a href="vertigo-en.html" class="text-center"><p class="text-center">See more</p></a>
+                            <a href="vertigo-EN.html" class="text-center"><p class="text-center">See more</p></a>
                         </div>
                     </div>
                 </div>
 
                 <div class="gallery-image renders">
                     <div class="each-item">
-                        <img class="port-image " src="img/Portfolio/bicicletero-01.png" alt="Bicycle station with publicity for a city "/>
+                        <img class="port-image " src="img/Portfolio/bikes/bicicletero-01.png" alt="Bicycle station with publicity for a city "/>
                         <div class="cap1">
-                            <h3>Biclte station</h3>
+                            <h3>Bicycle station</h3>
                             <p>Desing and render for Montevide goverment (Uruguay)</p>
                         </div>
                         <div class="cap2">
@@ -303,11 +303,11 @@
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/Metal-01.png" alt="3D product design of a metal box"/>
                         <div class="cap1">
-                            <h3>Box for PCV</h3>
+                            <h3>Metal Designs</h3>
                             <p>Laser cut metal and cnc creation</p>
                         </div>
                         <div class="cap2">
-                            <a href="vertigo-en.html" class="text-center"><p class="text-center">See more</p></a>
+                            <a href="cvaMetal-EN.html" class="text-center"><p class="text-center">See more</p></a>
                         </div>
                     </div>
                 </div>
@@ -320,7 +320,7 @@
                             <p>Design and develop of packaging</p>
                         </div>
                         <div class="cap2">
-                            <a href="vertigo-en.html" class="text-center"><p class="text-center">See more</p></a>
+                            <a href="coco-EN.html" class="text-center"><p class="text-center">See more</p></a>
                         </div>
                     </div>
                 </div>
@@ -338,15 +338,15 @@
                     </div>
                 </div>
 
-                <div class="gallery-image furniture">
+                <div class="gallery-image stands">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/Stand-01.png" alt="Exibition stand for coconuts milk product"/>
                         <div class="cap1">
                             <h3>Coconuts Milk</h3>
-                            <p>Design and develop of packaging and exibition stand</p>
+                            <p>Design of exibition stand</p>
                         </div>
                         <div class="cap2">
-                            <a href="vertigo-en.html" class="text-center"><p class="text-center">See more</p></a>
+                            <a href="coco-EN.html" class="text-center"><p class="text-center">See more</p></a>
                         </div>
                     </div>
                 </div>
@@ -364,32 +364,7 @@
                     </div>
                 </div>
 
-                <div class="gallery-image renders">
-                    <div class="each-item">
-                        <img class="port-image" src="img/aboutme.png" alt="3D render of product design"/>
-                        <div class="cap1">
-                            <h3>Diseno de RENDER</h3>
-                            <p>Familia de producto de leche de coco</p>
-                        </div>
-                        <div class="cap2">
-                            <a href="vertigo-en.html" class="text-center"><p class="text-center">See more</p></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="gallery-image metal">
-                    <div class="each-item">
-                        <img class="port-image prototypes" src="img/aboutme.png" alt="3d product design"/>
-                        <div class="cap1">
-                            <h3>Diseno MODEL</h3>
-                            <p>Familia de producto de leche de coco</p>
-                        </div>
-                        <div class="cap2">
-                            <a href="vertigo-en.html" class="text-center"><p class="text-center">See more</p></a>
-                        </div>
-                    </div>
-                </div>
-
+                
                 <div class="clr"></div>
 
             </div>
