--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
+    
     <!--SEO-->
     <meta name="description" content="I am a industrial designer. Development from research, concept, engineering to manufacturing. Creative. 3D modeling. UX/UI. Web development.">
     <meta name="keywords" content="industrial designer, producto designer, development, UX, UI, 3D modeling, web development, portfolio">
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="lang-movil" id="lang-movil">
-                    <li><a class="dropdown-item" href="index-ES.html">ES</a></li>
+                    <li><a class="dropdown-item" href="index.html">ES</a></li>
                     <li><a class="dropdown-item" href="index-EN.html">EN</a></li>
                     <li><a class="dropdown-item" href="index-ES.html">IT</a></li>
                 </div>
@@ -87,7 +87,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#about" class="nav-link">About me</a>
+                        <a class="nav-link text-white" href="about-EN.html" class="nav-link">About me</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -96,9 +96,16 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="vertigo-EN.html">Vertigo</a></li>
-                            <li><a class="dropdown-item" href="cva-EN.html">CVA SA</a></li>
-                            <li><a class="dropdown-item" href="interieur-EN.html">interieur Forma</a></li>
-                            <li><a class="dropdown-item" href="bikes-EN.html">Bikes station</a></li>
+                            <!-- <li><a a class="nav-link dropdown-toggle text-white" href="portfolio" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                CVA</a>
+                                <ul class="dropdown dropright dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
+                                    <li><a class="dropdown-item" href="cvaMetal-EN.html">Metals</a></li>
+                                    <li><a class="dropdown-item" href="cvaRender-EN.html">Renders</a></li>
+                                    <li><a class="dropdown-item" href="cvaExibi-EN.html">Exibition</a></li>
+                                </ul>
+                            </li> -->
+                            <li><a class="dropdown-item" href="interieur-EN.html">Interieur Forma</a></li>
+                            <li><a class="dropdown-item" href="bikes-EN.html">Bikes Station</a></li>
                             <li><a class="dropdown-item" href="coco-EN.html">Coconut Milk</a></li>
                         </ul>
                     </li>
@@ -360,6 +367,19 @@
                         </div>
                         <div class="cap2">
                             <a href="vertigo-en.html" class="text-center"><p class="text-center">See more</p></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="gallery-image prototypes">
+                    <div class="each-item">
+                        <img class="port-image" src="img/Portfolio/inter2.png" alt="Design and funcional prototype of a babay carryt bag"/>
+                        <div class="cap1">
+                            <h3>Furniture</h3>
+                            <p>Workstation with Knoll´s designs</p>
+                        </div>
+                        <div class="cap2">
+                            <a href="interieur-EN.html" class="text-center"><p class="text-center">See more</p></a>
                         </div>
                     </div>
                 </div>
