--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>
 
             <div class="col-6 right">
-                <img class="img-about img-fluid" style="filter: sepia(var(--value, 80%)" src="img/About-me/2.png">
+                <img class="img-about img-fluid" src="img/About-me/2.png">
                 <p class="box-bottom"></p>
             </div>
         </section>
