--- a/coco-EN.html
+++ b/coco-EN.html
@@ -67,14 +67,14 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
                         <li><a class="dropdown-item" href="index-ES.html">Español</a></li>
-                        <li><a class="dropdown-item" href="index-EN.html">English</a></li>
+                        <li><a class="dropdown-item" href="index.html">English</a></li>
                         <li><a class="dropdown-item" href="index-ES.html">Italian</a></li>
                     </ul>
                 </div>
 
                 <div class="lang-movil" id="lang-movil">
                     <li><a class="dropdown-item" href="index-ES.html">ES</a></li>
-                    <li><a class="dropdown-item" href="index-EN.html">EN</a></li>
+                    <li><a class="dropdown-item" href="index.html">EN</a></li>
                     <li><a class="dropdown-item" href="index-ES.html">IT</a></li>
                 </div>
             </a>
@@ -89,7 +89,7 @@
                 <ul class="navbar-nav my-2 my-lg-0" style="--bs-scroll-height: 100px;">
                 
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="index-EN.html" class="nav-link">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="index.html" class="nav-link">Home</a>
                     </li>
 
                     <li class="nav-item">
@@ -110,7 +110,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="index-EN.html" class="nav-link">Skills</a>
+                        <a class="nav-link text-white" href="index.html" class="nav-link">Skills</a>
                     </li>
 
                     <li class="nav-item">
@@ -164,7 +164,7 @@
                         
         <nav aria-label="breadcrumb" class="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index-EN.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Coconut Milk</li>
             </ol>
         </nav>
