--- a/portfolio-EN.html
+++ b/portfolio-EN.html
@@ -179,7 +179,7 @@
            
             <div class="gallery-wrap">
             
-                <div class="gallery-image prototypes">
+                <div class="portfolio-EN gallery-image prototypes">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/vertigo/vertigo1-01.png" alt="Prototype of a window cleaner"/>
                         <div class="cap1">
@@ -192,7 +192,7 @@
                     </div>
                 </div>
 
-                <div class="gallery-image renders">
+                <div class="portfolio-EN gallery-image renders">
                     <div class="each-item">
                         <img class="port-image " src="img/Portfolio/bikes/bicicletero-01.png" alt="Bicycle station with publicity for a city "/>
                         <div class="cap1">
@@ -205,7 +205,7 @@
                     </div>
                 </div>
 
-                <div class="gallery-image renders metal">
+                <div class="portfolio-EN gallery-image renders metal">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/Metal-01.png" alt="3D product design of a metal box"/>
                         <div class="cap1">
@@ -218,7 +218,7 @@
                     </div>
                 </div>
 
-                <div class="gallery-image packaging render">
+                <div class="portfolio-EN gallery-image packaging render">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/Packaging-01.png" alt="Packaging for coconuts milk brand"/>
                         <div class="cap1">
@@ -231,7 +231,7 @@
                     </div>
                 </div>
 
-                <div class="gallery-image render">
+                <div class="portfolio-EN gallery-image render">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/Render-01.png" alt="3D design model of a magic box for Steampunk style"/>
                         <div class="cap1">
@@ -244,7 +244,7 @@
                     </div>
                 </div>
 
-                <div class="gallery-image stands">
+                <div class="portfolio-EN gallery-image stands">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/Stand-01.png" alt="Exibition stand for coconuts milk product"/>
                         <div class="cap1">
@@ -257,7 +257,7 @@
                     </div>
                 </div>
 
-                <div class="gallery-image prototypes">
+                <div class="portfolio-EN gallery-image prototypes">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/Uoa-01.png" alt="Design and funcional prototype of a babay carryt bag"/>
                         <div class="cap1">
@@ -270,7 +270,7 @@
                     </div>
                 </div>
 
-                <div class="gallery-image prototypes">
+                <div class="portfolio-EN gallery-image prototypes">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/inter2.png" alt="Design and funcional prototype of a babay carryt bag"/>
                         <div class="cap1">
