--- a/cvaStand-EN.html
+++ b/cvaStand-EN.html
@@ -165,6 +165,7 @@
         <nav aria-label="breadcrumb" class="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="portfolio-EN.html">Portfolio</a></li>
                 <li class="breadcrumb-item active" aria-current="page">CVA Exibition Stand</li>
             </ol>
         </nav>
