--- a/bikes-EN.html
+++ b/bikes-EN.html
@@ -164,6 +164,7 @@
         <nav aria-label="breadcrumb" class="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="portfolio-EN.html">Portfolio</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Bike Station</li>
             </ol>
         </nav>
