--- a/interieur-EN.html
+++ b/interieur-EN.html
@@ -220,7 +220,7 @@
                 
                         <div class="col-lg-4 side-text">
                             <div class="portfolio-info">
-                                <h3>/// VERTIGO</h3>
+                                <h3>Furniture Design</h3>
                                 <ul>
                                     <li><strong>Category</strong>: Prototype</li>
                                     <li><strong>Client</strong>: Interieur Forma SA</li>
