--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
                         
                             <li><a class="dropdown-item dropdown-toggle" href="vertigo-EN.html">Vertigo</a>
                                 <ul class="submenu dropdown-menu">
-                                    <li><a class="dropdown-item" href="vertigoRender-EN.html">Renders</a></li>
-                                    <li><a class="dropdown-item" href="vertigo-EN.html">Prototype</a></li>
-                                    <li><a class="dropdown-item" href="vertigoPress-EN.html">Press</a></li>
+                                    <li><a class="dropdown-item" href="-EN.html">Renders</a></li>
+                                    <li><a class="dropdown-item" href="-EN.html">Prototype</a></li>
+                                    <li><a class="dropdown-item" href="-EN.html">Press</a></li>
                                 </ul>
                            </li>
 
-                           <li><a class="dropdown-item dropdown-toggle" href="vertigo-EN.html">CVA</a>
+                           <li><a class="dropdown-item dropdown-toggle" href="cva-EN.html">CVA</a>
                                 <ul class="submenu dropdown-menu">
                                     <li><a class="dropdown-item" href="cvaMetal-EN.html">Metals</a></li>
                                     <li><a class="dropdown-item" href="cvaRender-EN.html">Renders</a></li>
@@ -135,6 +135,7 @@
                 <ul class="navbar-nav flex-row ms-md-auto justify-content-flex-end">
                                              
                     <li class="nav-item">
+
                         <a href="https://www.behance.net/soleadadpriano" target="blank"><i class="fab fa-behance-square"></i></a>
                     </li>
 
@@ -317,13 +318,26 @@
 
                 <div class="gallery-image renders metal">
                     <div class="each-item">
-                        <img class="port-image" src="img/Portfolio/Metal-01.png" alt="3D product design of a metal box"/>
+                        <img class="port-image" src="img/Portfolio/cva/metalDesign/Metal-01.png" alt="3D product design of a metal box"/>
                         <div class="cap1">
                             <h3>Metal Designs</h3>
                             <p>Laser cut metal and cnc creation</p>
                         </div>
                         <div class="cap2">
                             <a href="cvaMetal-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-EN gallery-image stands">
+                    <div class="each-item">
+                        <img class="port-image" src="img/Portfolio/cva/exibition/Stand1-01.png" alt="Automechanika exibition in Buenos Aires for CVA SA"/>
+                        <div class="cap1">
+                            <h3 class="h3-mob">CVA SA</h3>
+                            <p class="p-mob">Exibtion Stand Design</p>
+                        </div>
+                        <div class="cap2">
+                            <a href="cva-EN.html" class="text-center"><p class="p-see-mob">See more</p></a>
                         </div>
                     </div>
                 </div>
