--- a/portfolio-EN.html
+++ b/portfolio-EN.html
@@ -99,7 +99,7 @@
                                 Vertigo</a>
                                         <ul class="dropdown dropright dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuSubLink">
                                             <li><a class="dropdown-item" href="vertigoRender-EN.html">Renders</a></li>
-                                            <li><a class="dropdown-item" href="vertigo-EN.html">Prototype</a></li>
+                                            <li><a class="dropdown-item" href="vertigoPrototype-EN.html">Prototype</a></li>
                                             <li><a class="dropdown-item" href="vertigoPress-EN.html">Press</a></li>
                                         </ul>
                             </li>
@@ -217,13 +217,26 @@
 
                 <div class="portfolio-EN gallery-image renders metal">
                     <div class="each-item">
-                        <img class="port-image" src="img/Portfolio/Metal-01.png" alt="3D product design of a metal box"/>
+                        <img class="port-image" src="img/Portfolio/cva/metalDesign/Metal-01.png" alt="3D product design of a metal box"/>
                         <div class="cap1">
-                            <h3 class="h3-mob">Metal Designs</h3>
-                            <p class="p-mob">Laser cut metal and cnc creation</p>
+                            <h3 class="h3-mob">CVA SA</h3>
+                            <p class="p-mob">3D modeling and renders</p>
                         </div>
                         <div class="cap2">
-                            <a href="cvaMetal-EN.html" class="text-center"><p class="p-see-mob">See more</p></a>
+                            <a href="cva-EN.html" class="text-center"><p class="p-see-mob">See more</p></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-EN gallery-image renders metal">
+                    <div class="each-item">
+                        <img class="port-image" src="img/Portfolio/cva/exibition/Stand1-01.png" alt="Automechanika exibition in Buenos Aires for CVA SA"/>
+                        <div class="cap1">
+                            <h3 class="h3-mob">CVA SA</h3>
+                            <p class="p-mob">Exibtion Stand Design</p>
+                        </div>
+                        <div class="cap2">
+                            <a href="cva-EN.html" class="text-center"><p class="p-see-mob">See more</p></a>
                         </div>
                     </div>
                 </div>
