--- a/index.html
+++ b/index.html
@@ -394,6 +394,19 @@
                     </div>
                 </div>
 
+                <div class="portfolio-EN gallery-image prototype">
+                    <div class="each-item">
+                        <img class="port-image" src="img/Portfolio/dandii/dandii-01.png" alt="3D design model of a magic box for Steampunk style"/>
+                        <div class="cap1">
+                            <h3  class="h3-mob">Dandi</h3>
+                            <p class="p-mob">Fruit dryer for cocktails</p>
+                        </div>
+                        <div class="cap2">
+                            <a href="dandii-en.html" class="text-center"><p class="p-see-mob">See more</p></a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="gallery-image prototypes">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/inter2.png" alt="Design and funcional prototype of a babay carryt bag"/>
