--- a/portfolio-EN.html
+++ b/portfolio-EN.html
@@ -254,19 +254,6 @@
                     </div>
                 </div>
 
-                <div class="portfolio-EN gallery-image render">
-                    <div class="each-item">
-                        <img class="port-image" src="img/Portfolio/Render-01.png" alt="3D design model of a magic box for Steampunk style"/>
-                        <div class="cap1">
-                            <h3  class="h3-mob">Design Cinema</h3>
-                            <p class="p-mob"> 3D Modeling and render</p>
-                        </div>
-                        <div class="cap2">
-                            <a href="vertigo-en.html" class="text-center"><p class="p-see-mob">See more</p></a>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="portfolio-EN gallery-image stands">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/Stand-01.png" alt="Exibition stand for coconuts milk product"/>
@@ -288,7 +275,7 @@
                             <p class="p-mob">Baby carring prototype</p>
                         </div>
                         <div class="cap2">
-                            <a href="vertigo-en.html" class="text-center"><p class="p-see-mob">See more</p></a>
+                            <a href="upa-EN.html" class="text-center"><p class="p-see-mob">See more</p></a>
                         </div>
                     </div>
                 </div>
@@ -302,6 +289,31 @@
                         </div>
                         <div class="cap2">
                             <a href="interieur-EN.html" class="text-center"><p class="p-see-mob">See more</p></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-EN gallery-image render">
+                    <div class="each-item">
+                        <img class="port-image" src="img/Portfolio/Render-01.png" alt="3D design model of a magic box for Steampunk style"/>
+                        <div class="cap1">
+                            <h3  class="h3-mob">Renders</h3>
+                            <p class="p-mob">3D Modeling and render</p>
+                        </div>
+                        <div class="cap2">
+                            <a href="renders-en.html" class="text-center"><p class="p-see-mob">See more</p></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-EN gallery-image render">
+                    <div class="each-item">
+                        <img class="port-image" src="img/Portfolio/dandii/dandii-01.png" alt="3D design model of a magic box for Steampunk style"/>
+                        <div class="cap1">
+                            <h3  class="h3-mob">Dandi</h3>
+                            <p class="p-mob">Fruit dryer for cocktails</p>
+                        </div>
+                        <div class="cap2">
+                            <a href="dandii-en.html" class="text-center"><p class="p-see-mob">See more</p></a>
                         </div>
                     </div>
                 </div>
