--- a/cva-EN.html
+++ b/cva-EN.html
@@ -44,7 +44,7 @@
     <link rel="shortcut icon" href="img/icons/Icon-web.svg" type="image/x-icon">
 
     <!--Nombre de Pestana-->
-    <title>Vertigo</title>
+    <title>CVA SA</title>
 
 </head>
 
