--- a/portfolio-EN.html
+++ b/portfolio-EN.html
@@ -305,7 +305,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-EN gallery-image render">
+                <div class="portfolio-EN gallery-image render prototype">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/dandii/dandii-01.png" alt="3D design model of a magic box for Steampunk style"/>
                         <div class="cap1">
