--- a/upa-EN.html
+++ b/upa-EN.html
@@ -155,7 +155,7 @@
 
         <!--  ========= Encabezado =========  -->
         <section  id="title" class="title container-fluid">
-            <h1 class="name subpage">Vertigo</h1>
+            <h1 class="name subpage">UPA!</h1>
             <h2 class="subName"></h2>
         </section>
         <!--  ========= FIN Encabezado =========  -->
